--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -8,7 +8,7 @@
 }
 
 .tooltip .tooltip-inner {
-  background: #070707;
+  background: #5a5a5a;
   color: white;
   border-radius: 4px;
   padding: 5px 10px 4px;
@@ -20,7 +20,7 @@
   border-style: solid;
   position: absolute;
   margin: 5px;
-  border-color: #070707;
+  border-color: #5a5a5a;
   z-index: 1;
 }
 
